// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<div>
   
  <span
    class=" s-y8aqkkbOYo4q"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      >
        <button
          class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
        >
          <img
            alt="./cover.jpg"
            class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
            loading="lazy"
            src="./cover.jpg"
          />
           
        </button>
        <!--&lt;Image&gt;-->
      </span>
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        Diamonds on the inside
      </h3>
       
      <h4
        class="s-irUkF_IR-GRw"
        slot="details"
      >
        by 
        <a
          class="underlined"
          href="#/artist/1"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/2"
          onclick="event.stopPropagation()"
        >
          The Innocent Criminals
        </a>
        
         
      </h4>
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Album&gt;-->
</div>
`;

exports[`Many artists 1`] = `
<div>
   
  <span
    class=" s-y8aqkkbOYo4q"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      >
        <button
          class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
        >
          <img
            alt="./cover.jpg"
            class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
            loading="lazy"
            src="./cover.jpg"
          />
           
        </button>
        <!--&lt;Image&gt;-->
      </span>
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        Diamonds on the inside
      </h3>
       
      <h4
        class="s-irUkF_IR-GRw"
        slot="details"
      >
        by 
        <a
          class="underlined"
          href="#/artist/3"
          onclick="event.stopPropagation()"
        >
          Muse
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/4"
          onclick="event.stopPropagation()"
        >
          Perl Jam
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/4"
          onclick="event.stopPropagation()"
        >
          Joe Satriani
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/6"
          onclick="event.stopPropagation()"
        >
          Avenged Sevenfold
        </a>
        
         
      </h4>
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Album&gt;-->
</div>
`;

exports[`No artist 1`] = `
<div>
   
  <span
    class=" s-y8aqkkbOYo4q"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      >
        <button
          class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
        >
          <img
            alt="./cover.jpg"
            class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg s-JU4hIbuSbdGN"
            loading="lazy"
            src="./cover.jpg"
          />
           
        </button>
        <!--&lt;Image&gt;-->
      </span>
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        Diamonds on the inside
      </h3>
       
      <h4
        class="s-irUkF_IR-GRw"
        slot="details"
      >
         
      </h4>
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Album&gt;-->
</div>
`;

exports[`Unknown 1`] = `
<div>
   
  <span
    class=" s-y8aqkkbOYo4q"
    role="tab"
    tabindex="0"
  >
    <div
      class="content s-y8aqkkbOYo4q"
    >
      <span
        class="artwork s-y8aqkkbOYo4q"
      >
        <button
          class="__flex_tliuhg_tliuhg __justify-center_tliuhg_tliuhg __items-center_tliuhg_tliuhg __bg-[--hover-bg-color]_tliuhg_tliuhg __overflow-hidden_tliuhg_tliuhg __h-full_qb5vnk_qb5vnk __w-full_qb5vnk_qb5vnk s-JU4hIbuSbdGN __rounded-sm_tliuhg_tliuhg"
        >
          <img
            class="__border-none_tliuhg_tliuhg __font-size-0_tliuhg_tliuhg __object-cover_tliuhg_tliuhg __w-full_tliuhg_tliuhg __h-full_tliuhg_tliuhg __hidden_tliuhg_tliuhg s-JU4hIbuSbdGN"
            loading="lazy"
            src=""
          />
           
          <i
            class="__inline-block_tliuhg_tliuhg __font-size-[200%]_tliuhg_tliuhg icons i-mdi-music-note s-JU4hIbuSbdGN"
            data-testid="i-mdi-music-note"
          />
        </button>
        <!--&lt;Image&gt;-->
      </span>
       
      <p
        class="controls s-y8aqkkbOYo4q"
      >
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="play"
        >
          <i
            class="icons i-mdi-play s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="primary iconOnly large s-zdMNlEQUhDx4"
          data-testid="enqueue"
        >
          <i
            class="icons i-mdi-playlist-plus s-zdMNlEQUhDx4"
          />
           
           
           
        </button>
        <!--&lt;Button&gt;-->
      </p>
    </div>
     
    <header
      class="s-y8aqkkbOYo4q"
    >
      <h3
        class="s-y8aqkkbOYo4q"
      >
        Unknown
      </h3>
       
      <h4
        class="s-irUkF_IR-GRw"
        slot="details"
      >
        by 
        <a
          class="underlined"
          href="#/artist/1"
          onclick="event.stopPropagation()"
        >
          Ben Harper
        </a>
        , 
        <a
          class="underlined"
          href="#/artist/2"
          onclick="event.stopPropagation()"
        >
          The Innocent Criminals
        </a>
        
         
      </h4>
    </header>
  </span>
  <!--&lt;GridItem&gt;-->
  <!--&lt;Album&gt;-->
</div>
`;
